control-hmi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-hmi
  namespace: control-hmi
  labels:
    app: control-hmi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-hmi
  template:
    metadata:
      labels:
        app: control-hmi
    spec:
      nodeSelector:
        role: worker
      containers:
        - name: control-hmi
          image: harbor.finalq.xyz/tools/control-hmi:2026-08-07-193710
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
