control-hmi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-hmi
  namespace: control-hmi
spec:
  type: ClusterIP
  selector:
    app: control-hmi
  ports:
    - name: http
      port: 3001
      targetPort: 3001
