control-hmi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-hmi
  namespace: control-hmi
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: hmi.finalq.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-hmi
                port:
                  number: 3001
